--- a/src/app/modules/main/components/home/home.component.html
+++ b/src/app/modules/main/components/home/home.component.html
@@ -38,6 +38,16 @@
     </div>
 </div>
 
+<!-- 4.1 -->
+<br /> <br />
+<div class="row">
+    <div class="col-lg-6">
+        <div class="dark-theme">
+            <canvas id="get_hemiarthroplasty_by_indication" #get_hemiarthroplasty_by_indication></canvas>
+        </div>
+    </div>
+</div>
+
 <!-- 6 -->
 <br /> <br />
 <div class="row">
@@ -50,14 +60,14 @@
 </div>
 
 <!-- 7 -->
-<br /> <br />
+<!-- <br /> <br />
 <div class="row">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_shoulder_arthroplasty_by_indication" #get_shoulder_arthroplasty_by_indication></canvas>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- 8 -->
 <br /> <br />
