Prosthesis Company graphs updated

--- a/src/app/modules/main/components/home/home.component.html
+++ b/src/app/modules/main/components/home/home.component.html
@@ -146,11 +146,11 @@
 </div>
 
 <!-- 16 -->
-<br /> <br />
+<!-- <br /> <br />
 <div class="dark-theme1 p-0">
     <canvas id="get_prosthesis_company_frequency_by_indication"
         #get_prosthesis_company_frequency_by_indication></canvas>
-</div>
+</div> -->
 
 <!-- 17 -->
 <br /> <br />
