Added Anchor links

--- a/src/app/modules/main/components/header/header.component.html
+++ b/src/app/modules/main/components/header/header.component.html
@@ -30,6 +30,31 @@
           <a class="nav-link" routerLink="contact-us">Contact</a>
         </li>
 
+        <!-- Dropdown menu -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Graphs
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#rotatorcuff_pathologies_with_counts">Prevalence of Rotator Cuff Pathologies</a></li>
+            <li><a class="dropdown-item" href="#rotatorcuff_pathology_with_comorbidities_by_age_and_sex">Prevalence of Rotatorcuff Pathology with ≥ Comorbidity by Age and Sex</a></li>
+            <li><a class="dropdown-item" href="#Neer3_by_age_and_sex">Prevalence of Neer 3-4 Proximal Humeral Fractures by Age & Sex</a></li>
+            <li><a class="dropdown-item" href="#hemiarthroplasty_by_age_and_sex">Hemiarthroplasty by Age and Sex</a></li>
+            <li><a class="dropdown-item" href="#hemiarthroplasty_by_indication">Hemiarthroplasty by Indication</a></li>
+            <li><a class="dropdown-item" href="#anatomic_total_shoulder_arthroplasty_by_age_and_sex">Anatomic Total Shoulder Arthroplasty by Age and Sex</a></li>
+            <li><a class="dropdown-item" href="#reverse_total_shoulder_arthroplasty_by_age_and_sex">Reverse Total Shoulder Arthroplasty by Age and sex</a></li>
+            <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_indication">Anatomic Total Shoulder Arthroplasty by Indication</a></li>
+            <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_age">Shoulder Arthroplasty by Age</a></li>
+            <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_sex">Shoulder Arthroplasty by Sex</a></li>
+            <li><a class="dropdown-item" href="#shoulder_arthoplasty_revision_rate_by_age">Shoulder Arthoplasty Revision Rate by Age Group</a></li>
+            <li><a class="dropdown-item" href="#shoulder_arthoplasty_revision_rate_by_sex">Shoulder Arthoplasty Revision Rate by Sex</a></li>
+            <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_complication">Shoulder Arthroplasty by Complication</a></li>
+            <li><a class="dropdown-item" href="#prosthesis_company_frequency_by_age_group">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Age Group</a></li>
+            <li><a class="dropdown-item" href="#revision_rates_of_prosthesis_company_by_indication">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Indication</a></li>
+            <!-- Add more items here as needed -->
+          </ul>
+        </li>
+
       </ul>
 
       <ul class="navbar-nav ms-auto">
