--- a/src/app/modules/main/components/home/home.component.html
+++ b/src/app/modules/main/components/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- 1 -->
 <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-6" id="rotatorcuff_pathologies_with_counts">
         <div class="dark-theme">
             <canvas id="get_rotatorcuff_pathologies_with_counts" #get_rotatorcuff_pathologies_with_counts></canvas>
         </div>
@@ -9,7 +9,7 @@
 
 <!-- 2 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="rotatorcuff_pathology_with_comorbidities_by_age_and_sex">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_prevalence_of_rotatorcuff_pathology_with_comorbidities_by_age_and_sex"
@@ -20,7 +20,7 @@
 
 <!-- 3 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="Neer3_by_age_and_sex">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_prevalence_of_Neer3_by_age_and_sex" #get_prevalence_of_Neer3_by_age_and_sex></canvas>
@@ -30,7 +30,7 @@
 
 <!-- 4 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="hemiarthroplasty_by_age_and_sex">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_hemiarthroplasty_by_age_and_sex" #get_hemiarthroplasty_by_age_and_sex></canvas>
@@ -40,7 +40,7 @@
 
 <!-- 4.1 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="hemiarthroplasty_by_indication">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_hemiarthroplasty_by_indication" #get_hemiarthroplasty_by_indication></canvas>
@@ -50,7 +50,7 @@
 
 <!-- 6 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="anatomic_total_shoulder_arthroplasty_by_age_and_sex">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_anatomic_total_shoulder_arthroplasty_by_age_and_sex"
@@ -71,7 +71,7 @@
 
 <!-- 8 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="reverse_total_shoulder_arthroplasty_by_age_and_sex">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_reverse_total_shoulder_arthroplasty_by_age_and_sex"
@@ -82,7 +82,7 @@
 
 <!-- 9 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="shoulder_arthroplasty_by_indication">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_shoulder_arthroplasty_by_indication"
@@ -93,7 +93,7 @@
 
 <!-- 10 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="shoulder_arthroplasty_by_age">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_shoulder_arthroplasty_by_age" #get_shoulder_arthroplasty_by_age></canvas>
@@ -103,7 +103,7 @@
 
 <!-- 11 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="shoulder_arthroplasty_by_sex">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_shoulder_arthroplasty_by_sex" #get_shoulder_arthroplasty_by_sex></canvas>
@@ -113,7 +113,7 @@
 
 <!-- 12 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="shoulder_arthoplasty_revision_rate_by_age">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_shoulder_arthoplasty_revision_rate_by_age"
@@ -124,7 +124,7 @@
 
 <!-- 13 -->
 <br /> <br />
-<div class="row">
+<div class="row" id="shoulder_arthoplasty_revision_rate_by_sex">
     <div class="col-lg-6">
         <div class="dark-theme">
             <canvas id="get_shoulder_arthoplasty_revision_rate_by_sex"
@@ -135,14 +135,22 @@
 
 <!-- 14 -->
 <br /> <br />
-<div class="dark-theme1">
-    <canvas id="get_shoulder_arthroplasty_by_complication" #get_shoulder_arthroplasty_by_complication></canvas>
+<div class="row" id="shoulder_arthroplasty_by_complication">
+    <div class="col-lg-6">
+        <div class="dark-theme1">
+            <canvas id="get_shoulder_arthroplasty_by_complication" #get_shoulder_arthroplasty_by_complication></canvas>
+        </div>
+    </div>
 </div>
 
 <!-- 15 -->
 <br /> <br />
-<div class="dark-theme1 p-5">
-    <canvas id="get_prosthesis_company_frequency_by_age_group" #get_prosthesis_company_frequency_by_age_group></canvas>
+<div class="row" id="prosthesis_company_frequency_by_age_group">
+    <div class="col-lg-6">
+        <div class="dark-theme1 p-5">
+            <canvas id="get_prosthesis_company_frequency_by_age_group" #get_prosthesis_company_frequency_by_age_group></canvas>
+        </div>
+    </div>
 </div>
 
 <!-- 16 -->
@@ -154,7 +162,11 @@
 
 <!-- 17 -->
 <br /> <br />
-<div class="dark-theme1">
-    <canvas id="get_revision_rates_of_prosthesis_company_by_indication"
-        #get_revision_rates_of_prosthesis_company_by_indication></canvas>
+<div class="row" id="revision_rates_of_prosthesis_company_by_indication">
+    <div class="col-lg-6">
+        <div class="dark-theme1">
+            <canvas id="get_revision_rates_of_prosthesis_company_by_indication"
+                #get_revision_rates_of_prosthesis_company_by_indication></canvas>
+        </div>
+    </div>
 </div>
