Adding Fields to Graphs

--- a/src/app/modules/main/components/home/home.component.html
+++ b/src/app/modules/main/components/home/home.component.html
@@ -136,9 +136,11 @@
 <!-- 14 -->
 <br /> <br />
 <div class="row" id="shoulder_arthroplasty_by_complication">
-    <div class="col-lg-6">
+    <div class="col-lg-10">
         <div class="dark-theme1">
-            <canvas id="get_shoulder_arthroplasty_by_complication" #get_shoulder_arthroplasty_by_complication></canvas>
+            <!-- <div class="chart-container"> -->
+                <canvas id="get_shoulder_arthroplasty_by_complication" #get_shoulder_arthroplasty_by_complication></canvas>
+            <!-- </div> -->
         </div>
     </div>
 </div>
@@ -146,7 +148,7 @@
 <!-- 15 -->
 <br /> <br />
 <div class="row" id="prosthesis_company_frequency_by_age_group">
-    <div class="col-lg-6">
+    <div class="col-lg-10">
         <div class="dark-theme1 p-5">
             <canvas id="get_prosthesis_company_frequency_by_age_group" #get_prosthesis_company_frequency_by_age_group></canvas>
         </div>
@@ -163,7 +165,7 @@
 <!-- 17 -->
 <br /> <br />
 <div class="row" id="revision_rates_of_prosthesis_company_by_indication">
-    <div class="col-lg-6">
+    <div class="col-lg-10">
         <div class="dark-theme1">
             <canvas id="get_revision_rates_of_prosthesis_company_by_indication"
                 #get_revision_rates_of_prosthesis_company_by_indication></canvas>
