--- a/src/app/modules/main/components/home/home.component.scss
+++ b/src/app/modules/main/components/home/home.component.scss
@@ -1,29 +1,29 @@
-.dark-theme {
-    background-color: #2a3e59;
-    color: #ffffff;
-    display: flex; 
-    justify-content: center;
-    height: 50vh;
+// .dark-theme {
+//     background-color: #2a3e59;
+//     color: #ffffff;
+//     display: flex; 
+//     justify-content: center;
+//     height: 50vh;
 
-}
+// }
 
-.dark-theme1 {
-    background-color: #2a3e59;
-    color: #ffffff;
-    display: flex; 
-    justify-content: center;
+// .dark-theme1 {
+//     background-color: #2a3e59;
+//     color: #ffffff;
+//     display: flex; 
+//     justify-content: center;
 
-}
+// }
 
-.row{
-    justify-content: center;
-}
+// .row{
+//     justify-content: center;
+// }
 
-.chart-container{
-    width: 100%;
-    overflow-x: auto;
+// .chart-container{
+//     width: 100%;
+//     overflow-x: auto;
 
-    canvas {
-        min-width: 600px; /* Ensures the canvas has a minimum width */
-    }
-}
+//     canvas {
+//         min-width: 600px; /* Ensures the canvas has a minimum width */
+//     }
+// }
