--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-
-<!-- <div class="container"> -->
+<div class="container">
+  <div class="row">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <router-outlet></router-outlet>
-<!-- </div> -->
+</div>
+</div>
 <!-- <router-outlet></router-outlet> -->
