--- a/src/app/modules/main/components/home/home.component.html
+++ b/src/app/modules/main/components/home/home.component.html
@@ -1,174 +1,14 @@
-<!-- 1 -->
-<div class="row">
-    <div class="col-lg-6" id="rotatorcuff_pathologies_with_counts">
-        <div class="dark-theme">
-            <canvas id="get_rotatorcuff_pathologies_with_counts" #get_rotatorcuff_pathologies_with_counts></canvas>
+
+<div class="px-4 py-5 my-5 text-center">
+    <!-- <img class="d-block mx-auto mb-4 bg-dark" src="../../assets/Logos/LOGOOOO.png" alt="" width="100" height="auto"> -->
+    <h1 class="display-5 fw-bold">HomePage</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse deleniti dolorum minima natus ex architecto amet itaque maxime recusandae, obcaecati ipsum? Tempora praesentium molestiae dolores inventore eligendi consequuntur neque vel?</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
         </div>
     </div>
 </div>
 
-<!-- 2 -->
-<br /> <br />
-<div class="row" id="rotatorcuff_pathology_with_comorbidities_by_age_and_sex">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_prevalence_of_rotatorcuff_pathology_with_comorbidities_by_age_and_sex"
-                #get_prevalence_of_rotatorcuff_pathology_with_comorbidities_by_age_and_sex></canvas>
-        </div>
-    </div>
-</div>
 
-<!-- 3 -->
-<br /> <br />
-<div class="row" id="Neer3_by_age_and_sex">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_prevalence_of_Neer3_by_age_and_sex" #get_prevalence_of_Neer3_by_age_and_sex></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 4 -->
-<br /> <br />
-<div class="row" id="hemiarthroplasty_by_age_and_sex">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_hemiarthroplasty_by_age_and_sex" #get_hemiarthroplasty_by_age_and_sex></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 4.1 -->
-<br /> <br />
-<div class="row" id="hemiarthroplasty_by_indication">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_hemiarthroplasty_by_indication" #get_hemiarthroplasty_by_indication></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 6 -->
-<br /> <br />
-<div class="row" id="anatomic_total_shoulder_arthroplasty_by_age_and_sex">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_anatomic_total_shoulder_arthroplasty_by_age_and_sex"
-                #get_anatomic_total_shoulder_arthroplasty_by_age_and_sex></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 7 -->
-<!-- <br /> <br />
-<div class="row">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_shoulder_arthroplasty_by_indication" #get_shoulder_arthroplasty_by_indication></canvas>
-        </div>
-    </div>
-</div> -->
-
-<!-- 8 -->
-<br /> <br />
-<div class="row" id="reverse_total_shoulder_arthroplasty_by_age_and_sex">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_reverse_total_shoulder_arthroplasty_by_age_and_sex"
-                #get_reverse_total_shoulder_arthroplasty_by_age_and_sex></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 9 -->
-<br /> <br />
-<div class="row" id="shoulder_arthroplasty_by_indication">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_shoulder_arthroplasty_by_indication"
-                #get_reverse_shoulder_arthroplasty_by_indication></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 10 -->
-<br /> <br />
-<div class="row" id="shoulder_arthroplasty_by_age">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_shoulder_arthroplasty_by_age" #get_shoulder_arthroplasty_by_age></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 11 -->
-<br /> <br />
-<div class="row" id="shoulder_arthroplasty_by_sex">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_shoulder_arthroplasty_by_sex" #get_shoulder_arthroplasty_by_sex></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 12 -->
-<br /> <br />
-<div class="row" id="shoulder_arthoplasty_revision_rate_by_age">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_shoulder_arthoplasty_revision_rate_by_age"
-                #get_shoulder_arthoplasty_revision_rate_by_age></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 13 -->
-<br /> <br />
-<div class="row" id="shoulder_arthoplasty_revision_rate_by_sex">
-    <div class="col-lg-6">
-        <div class="dark-theme">
-            <canvas id="get_shoulder_arthoplasty_revision_rate_by_sex"
-                #get_shoulder_arthoplasty_revision_rate_by_sex></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 14 -->
-<br /> <br />
-<div class="row" id="shoulder_arthroplasty_by_complication">
-    <div class="col-lg-10">
-        <div class="dark-theme1">
-            <!-- <div class="chart-container"> -->
-                <canvas id="get_shoulder_arthroplasty_by_complication" #get_shoulder_arthroplasty_by_complication></canvas>
-            <!-- </div> -->
-        </div>
-    </div>
-</div>
-
-<!-- 15 -->
-<br /> <br />
-<div class="row" id="prosthesis_company_frequency_by_age_group">
-    <div class="col-lg-10">
-        <div class="dark-theme1 p-5">
-            <canvas id="get_prosthesis_company_frequency_by_age_group" #get_prosthesis_company_frequency_by_age_group></canvas>
-        </div>
-    </div>
-</div>
-
-<!-- 16 -->
-<!-- <br /> <br />
-<div class="dark-theme1 p-0">
-    <canvas id="get_prosthesis_company_frequency_by_indication"
-        #get_prosthesis_company_frequency_by_indication></canvas>
-</div> -->
-
-<!-- 17 -->
-<br /> <br />
-<div class="row" id="revision_rates_of_prosthesis_company_by_indication">
-    <div class="col-lg-10">
-        <div class="dark-theme1">
-            <canvas id="get_revision_rates_of_prosthesis_company_by_indication"
-                #get_revision_rates_of_prosthesis_company_by_indication></canvas>
-        </div>
-    </div>
-</div>
