--- a/src/app/modules/main/landing-page.component.html
+++ b/src/app/modules/main/landing-page.component.html
@@ -1,5 +1,11 @@
-<app-header></app-header>
-<div class="container-fluid shadow-lg">
-    <router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+        <app-header></app-header>
+    </div>
+</div>
+<div class="container-fluid shadow-lg mt-4">
+    <div class="row">
+        <router-outlet></router-outlet>
+    </div>
 </div>
 <!-- <app-footer></app-footer> -->
