--- a/src/app/modules/main/landing-page.component.scss
+++ b/src/app/modules/main/landing-page.component.scss
@@ -2,6 +2,7 @@
     margin: auto;
     width: 95%;
     padding: 1%;
+    padding-top: 70px;
     min-height: 100vh;
     background-color: rgb(228, 228, 228);
     box-shadow: 1px;
