--- a/src/app/modules/main/components/header/header.component.html
+++ b/src/app/modules/main/components/header/header.component.html
@@ -25,7 +25,7 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle dropdown-toggle-split" id="navbarDropdown" routerLink="/data" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Data
+              Graphs
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="/data" fragment="rotatorcuff_pathologies_with_counts">Prevalence of Rotator Cuff Pathologies</a></li>
@@ -73,11 +73,11 @@
           </li> -->
 
           <li class="nav-item">
-            <a class="nav-link" routerLink="about">About</a>
+            <a class="nav-link" routerLink="about">About Us</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" routerLink="contact-us">Contact</a>
+            <a class="nav-link" routerLink="contact-us">Contact Us</a>
           </li>
 
           <!-- Dropdown menu -->
