Adding content in homepage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<div class="container">
-  <div class="row">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <router-outlet></router-outlet>
+<div class="dark-theme">
+    <router-outlet></router-outlet>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </div>
-</div>
-<!-- <router-outlet></router-outlet> -->
