--- a/src/app/modules/main/components/data/data.component.html
+++ b/src/app/modules/main/components/data/data.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container pt-5">
 <!-- 1 -->
-<div class="row">
+<div class="row mb-5">
     <div class="col-lg-6" id="rotatorcuff_pathologies_with_counts">
         <div class="dark-theme">
             <canvas id="get_rotatorcuff_pathologies_with_counts" #get_rotatorcuff_pathologies_with_counts></canvas>
