--- a/src/app/modules/main/components/header/header.component.html
+++ b/src/app/modules/main/components/header/header.component.html
@@ -1,30 +1,95 @@
-<!-- Image and text -->
-<div class="fixed-top">
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
-
-      <a class="navbar-brand" routerLink="">
-        <img src="../../../../../assets/Logos/LOGOOOO.png" alt="" width="150" class="d-inline-block">
-      </a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ms-auto">
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top px-4">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="">
+      <img src="../../../../../assets/Logos/LOGOOOO.png" alt="" width="150" class="d-inline-block">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="mx-auto d-flex justify-content-center">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" routerLink="dashboard" *ngIf="loggedin">Dashboard</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" routerLink="home">Home</a>
           </li>
+          <li class="nav-item dropdown d-flex align-items-center">
+            <!-- <a class="nav-link" >Graphs</a> -->
+            <!-- <a class="nav-link dropdown-toggle" id="navbarDropdown" routerLink="/data" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Graphs
+            </a> -->
+            <a class="nav-link pe-0" routerLink="/data" id="navbarDropdown">
+              Graphs
+            </a>
+            <a class="nav-link dropdown-toggle ps-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <!-- Dropdown items -->
+              <li><a class="dropdown-item" routerLink="/data" fragment="rotatorcuff_pathologies_with_counts">Prevalence of Rotator Cuff Pathologies</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="rotatorcuff_pathology_with_comorbidities_by_age_and_sex">Prevalence of Rotatorcuff Pathology with ≥ Comorbidity by Age and Sex</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="Neer3_by_age_and_sex">Prevalence of Neer 3-4 Proximal Humeral Fractures by Age & Sex</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="hemiarthroplasty_by_age_and_sex">Hemiarthroplasty by Age and Sex</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="hemiarthroplasty_by_indication">Hemiarthroplasty by Indication</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="anatomic_total_shoulder_arthroplasty_by_age_and_sex">Anatomic Total Shoulder Arthroplasty by Age and Sex</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="reverse_total_shoulder_arthroplasty_by_age_and_sex">Reverse Total Shoulder Arthroplasty by Age and sex</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="shoulder_arthroplasty_by_indication">Anatomic Total Shoulder Arthroplasty by Indication</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="shoulder_arthroplasty_by_age">Shoulder Arthroplasty by Age</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="shoulder_arthroplasty_by_sex">Shoulder Arthroplasty by Sex</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="shoulder_arthoplasty_revision_rate_by_age">Shoulder Arthoplasty Revision Rate by Age Group</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="shoulder_arthoplasty_revision_rate_by_sex">Shoulder Arthoplasty Revision Rate by Sex</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="shoulder_arthroplasty_by_complication">Shoulder Arthroplasty by Complication</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="prosthesis_company_frequency_by_age_group">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Age Group</a></li>
+              <li><a class="dropdown-item" routerLink="/data" fragment="revision_rates_of_prosthesis_company_by_indication">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Indication</a></li>
+            <!-- Add other dropdown items here -->
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="about">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="contact-us">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <button class="btn btn-warning" (click)="signin_clicked()" *ngIf="!loggedin">Sign in</button>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-outline-warning" (click)="signOut_clicked()" *ngIf="loggedin">Sign out</button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
+<!-- <div class="fixed-top"> -->
+  <!-- <div class="row"> navbar-expand-lg  bg-gradient -->
+  <!-- <nav class="navbar navbar-fixed-top navbar-dark bg-dark px-4">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" routerLink="">
+          <img src="../../../../../assets/Logos/LOGOOOO.png" alt="" width="150" class="d-inline-block">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="dashboard" *ngIf="loggedin">Dashboard</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link" routerLink="home">Home</a>
+          </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle dropdown-toggle-split" id="navbarDropdown" routerLink="/data" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle dropdown-toggle-split" id="navbarDropdown" routerLink="data" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Graphs
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
@@ -43,76 +108,22 @@
               <li><a class="dropdown-item" routerLink="/data" fragment="shoulder_arthroplasty_by_complication">Shoulder Arthroplasty by Complication</a></li>
               <li><a class="dropdown-item" routerLink="/data" fragment="prosthesis_company_frequency_by_age_group">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Age Group</a></li>
               <li><a class="dropdown-item" routerLink="/data" fragment="revision_rates_of_prosthesis_company_by_indication">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Indication</a></li>
-              <!-- Add more items here as needed -->
             </ul>
           </li>
-          
-
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle dropdown-toggle-split" id="navbarDropdown" routerLink="data" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Data
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#rotatorcuff_pathologies_with_counts">Prevalence of Rotator Cuff Pathologies</a></li>
-              <li><a class="dropdown-item" href="#rotatorcuff_pathology_with_comorbidities_by_age_and_sex">Prevalence of Rotatorcuff Pathology with ≥ Comorbidity by Age and Sex</a></li>
-              <li><a class="dropdown-item" href="#Neer3_by_age_and_sex">Prevalence of Neer 3-4 Proximal Humeral Fractures by Age & Sex</a></li>
-              <li><a class="dropdown-item" href="#hemiarthroplasty_by_age_and_sex">Hemiarthroplasty by Age and Sex</a></li>
-              <li><a class="dropdown-item" href="#hemiarthroplasty_by_indication">Hemiarthroplasty by Indication</a></li>
-              <li><a class="dropdown-item" href="#anatomic_total_shoulder_arthroplasty_by_age_and_sex">Anatomic Total Shoulder Arthroplasty by Age and Sex</a></li>
-              <li><a class="dropdown-item" href="#reverse_total_shoulder_arthroplasty_by_age_and_sex">Reverse Total Shoulder Arthroplasty by Age and sex</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_indication">Anatomic Total Shoulder Arthroplasty by Indication</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_age">Shoulder Arthroplasty by Age</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_sex">Shoulder Arthroplasty by Sex</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthoplasty_revision_rate_by_age">Shoulder Arthoplasty Revision Rate by Age Group</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthoplasty_revision_rate_by_sex">Shoulder Arthoplasty Revision Rate by Sex</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_complication">Shoulder Arthroplasty by Complication</a></li>
-              <li><a class="dropdown-item" href="#prosthesis_company_frequency_by_age_group">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Age Group</a></li>
-              <li><a class="dropdown-item" href="#revision_rates_of_prosthesis_company_by_indication">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Indication</a></li>
-              
-            </ul>
-          </li> -->
-
           <li class="nav-item">
             <a class="nav-link" routerLink="about">About Us</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" routerLink="contact-us">Contact Us</a>
           </li>
-
-          <!-- Dropdown menu -->
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Graphs
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#rotatorcuff_pathologies_with_counts">Prevalence of Rotator Cuff Pathologies</a></li>
-              <li><a class="dropdown-item" href="#rotatorcuff_pathology_with_comorbidities_by_age_and_sex">Prevalence of Rotatorcuff Pathology with ≥ Comorbidity by Age and Sex</a></li>
-              <li><a class="dropdown-item" href="#Neer3_by_age_and_sex">Prevalence of Neer 3-4 Proximal Humeral Fractures by Age & Sex</a></li>
-              <li><a class="dropdown-item" href="#hemiarthroplasty_by_age_and_sex">Hemiarthroplasty by Age and Sex</a></li>
-              <li><a class="dropdown-item" href="#hemiarthroplasty_by_indication">Hemiarthroplasty by Indication</a></li>
-              <li><a class="dropdown-item" href="#anatomic_total_shoulder_arthroplasty_by_age_and_sex">Anatomic Total Shoulder Arthroplasty by Age and Sex</a></li>
-              <li><a class="dropdown-item" href="#reverse_total_shoulder_arthroplasty_by_age_and_sex">Reverse Total Shoulder Arthroplasty by Age and sex</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_indication">Anatomic Total Shoulder Arthroplasty by Indication</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_age">Shoulder Arthroplasty by Age</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_sex">Shoulder Arthroplasty by Sex</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthoplasty_revision_rate_by_age">Shoulder Arthoplasty Revision Rate by Age Group</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthoplasty_revision_rate_by_sex">Shoulder Arthoplasty Revision Rate by Sex</a></li>
-              <li><a class="dropdown-item" href="#shoulder_arthroplasty_by_complication">Shoulder Arthroplasty by Complication</a></li>
-              <li><a class="dropdown-item" href="#prosthesis_company_frequency_by_age_group">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Age Group</a></li>
-              <li><a class="dropdown-item" href="#revision_rates_of_prosthesis_company_by_indication">Prosthesis Companies: Fx solution and Enovis (DJO) Frequency by Indication</a></li>
-            
-            </ul>
-          </li> -->
-
         </ul>
 
-        <ul class="navbar-nav ms-auto">
+        <ul class="nav navbar-nav navbar-right ms-auto">
           <button class="btn btn-warning" (click)="signin_clicked()" *ngIf="!loggedin">Sign in</button> &nbsp;
           <button class="btn btn-outline-warning" (click)="signOut_clicked()" *ngIf="loggedin">Sign out</button> &nbsp;
         </ul>
       </div>
-
-  </nav>
-
-</div>
+    </div>
+  </nav> -->
+<!-- </div> -->
+<!-- </div> -->
