--- a/src/app/modules/main/components/header/header.component.scss
+++ b/src/app/modules/main/components/header/header.component.scss
@@ -1,6 +1,6 @@
 .navbar{
-    padding-left: 2%;
-    padding-right: 2%;
+    // padding-left: 2%;
+    // padding-right: 2%;
     // background-color: #212641;
     color: white;
 }
@@ -11,3 +11,27 @@
 .bg-gradient{
     background-image: linear-gradient(#2a3e59, #19235c) !important;
 }
+
+.nav-item.dropdown:hover .dropdown-menu {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+    transform: none;
+  }
+  
+  .nav-item.dropdown .dropdown-menu {
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0.2s, opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  }
+  
+  .nav-item.dropdown:hover .nav-link {
+    color: #ffffff; /* Adjust this if you want a different hover color for the nav-link */
+  }
+
+  .dropdown-menu {
+    margin-top: 0; /* Adjust as needed */
+    transform: translateY(100%); /* Push the dropdown fully below the button */
+    top: 100% !important; /* Ensure dropdown is fully below */
+  }
