--- a/src/app/modules/main/components/home/home.component.html
+++ b/src/app/modules/main/components/home/home.component.html
@@ -1,14 +1,133 @@
+<!-- 
+<div class="container pt-5">
+    <div class="row">
+        <div class="col-md-6 d-flex justify-content-center">
+            <img src="../../assets/imgs/DSC_0413 copy.JPG" class="img-fluid rounded" alt="Surgery Image">
+        </div>
+        <div class="col-md-6 d-flex align-items-center">
+            <div class="text-center">
+                <p class="fs-3">“Innovating Orthopedic Care, One Data Point at a Time”</p>
+            </div>
+        </div>
+    </div>
 
-<div class="px-4 py-5 my-5 text-center">
-    <!-- <img class="d-block mx-auto mb-4 bg-dark" src="../../assets/Logos/LOGOOOO.png" alt="" width="100" height="auto"> -->
-    <h1 class="display-5 fw-bold">HomePage</h1>
-    <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse deleniti dolorum minima natus ex architecto amet itaque maxime recusandae, obcaecati ipsum? Tempora praesentium molestiae dolores inventore eligendi consequuntur neque vel?</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+    <div class="row">
+        <div class="col-md-6 d-flex flex-column justify-content-center text-center">
+            <p class="fs-3">“As pioneers in orthopedic epidemiology, we reshape patient care by revolutionizing orthopedic research.”</p>
+            <a routerLink="/data" class="btn btn-outline-light mt-3">Get Started</a>
+        </div>
+        <div class="col-md-6 d-flex justify-content-center">
+            <img src="../../assets/imgs/DSC_0429 copy.JPG" class="img-fluid rounded" alt="Surgery Image">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="text-center">
+            <p class="fs-3 mb-5">Video by our founders</p>
+            <div class="ratio ratio-16x9">
+                <div class="d-flex justify-content-center align-items-center border border-light rounded-circle" style="height: 100%; width: 100%; max-width: 200px;">
+                    <span class="fs-1">&#9654;</span> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row vh-100">
+        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
+            <h1 class="mb-5">PRO TRACKER</h1>
+            <div class="mb-5">
+                <div class="d-flex justify-content-around w-100">
+                    <div class="text-center">
+                        <img src="../../assets/icons/information.png" alt="About Us Icon" class="img-fluid icon-size">
+                        <p class="mt-3 fs-4">About us</p>
+                    </div>
+                    <div class="text-center">
+                        <img src="../../assets/icons/email.png" alt="Contact Us Icon" class="img-fluid icon-size">
+                        <p class="mt-3 fs-4">Contact Us</p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <p class="fs-4">Get Social</p>
+                <div class="d-flex justify-content-center">
+                    <a href="#" class="me-3"><img src="../../assets/icons/facebook.png" alt="Facebook" class="img-fluid icon-size"></a>
+                    <a href="#" class="me-3"><img src="../assets/icons/instagram.png" alt="Instagram" class="img-fluid icon-size"></a>
+                    <a href="#"><img src="../../assets/icons/twitter.png" alt="Twitter" class="img-fluid icon-size"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 p-0">
+            <img src="../../assets/imgs/DSC_0407 copy.JPG" class="img-fluid h-100 w-100" alt="Surgery Image">
         </div>
     </div>
 </div>
 
+ -->
 
+ <div class="container mt-5 pt-5">
+    <div class="row mb-5 py-5">
+        <div class="col-md-6 d-flex justify-content-center align-items-center mb-4 mb-md-0">
+            <img src="../../assets/imgs/DSC_0413 copy.JPG" class="shadow-lg rounded" alt="Surgery Image" style="max-width: 50%; height: auto;">
+        </div>
+        <div class="col-md-4 d-flex align-items-center">
+            <div class="text-start">
+                <p class="fs-3 fw-light lh-sm">Innovating Orthopedic Care, One Data Point at a Time</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-5 pb-5">
+        <div class="col-md-6 d-flex flex-column justify-content-center text-center mb-4 mb-md-0">
+            <p class="fs-3 fw-light lh-sm">As pioneers in orthopedic epidemiology, we reshape patient care by revolutionizing orthopedic research.</p>
+            <a routerLink="/data" class="btn btn-lg btn-outline-light mt-3 mx-auto" style="max-width:fit-content">Get Started</a>
+        </div>
+        <div class="col-md-6 d-flex justify-content-center align-items-center">
+            <img src="../../assets/imgs/DSC_0429 copy.JPG" class="shadow-lg rounded" alt="Surgery Image" style="max-width: 50%; height: auto;">
+        </div>
+    </div>
+
+    <div class="row mb-5 pb-5">
+        <div class="col text-center">
+            <p class="fs-2 fw-light mb-4 pb-4">Video by our founders</p>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="" style="height: auto; width: 100%">
+                    <iframe width="860" height="515" src="https://www.youtube.com/embed/k90eszXz-b0?si=-8G6KFwZP8m5Jt5H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <!-- width="560" height="315" -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5 d-flex flex-column justify-content-start align-items-start text-start mb-4">
+            <h1 class="my-5 fs-6 ps-4">PRO TRACKER</h1>
+            <div class="mb-5 pt-5 ps-4 w-100">
+                <div class="d-flex justify-content-start">
+                    <div class="text-start">
+                        <a routerLink="/about" class="me-3">
+                            <img src="../../assets/icons/information.png" alt="About Us Icon" class="img-fluid icon-size" style="width: 50px;"style="width: 50px; filter: brightness(0) invert(0.87);">
+                        </a>
+                        <p class="mt-3 me-5 fs-6">About Us</p>
+                    </div>
+                    <div class="text-start">
+                        <a routerLink="/contact-us" class="me-3">
+                            <img src="../../assets/icons/email.png" alt="Contact Us Icon" class="img-fluid icon-size" style="width: 50px; filter: brightness(0) invert(0.87);">
+                        </a>
+                        <p class="mt-3 fs-6">Contact Us</p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-start">
+                <p class="fs-6 mb-5 pt-5 ps-4">Get Social</p>
+                <div class="d-flex justify-content-start ps-4">
+                    <a href="#" class="me-3"><img src="../../assets/icons/facebook.png" alt="Facebook" class="img-fluid icon-size" style="width: 30px; filter: brightness(0) invert(0.87);"></a>
+                    <a href="#" class="me-3"><img src="../../assets/icons/instagram.png" alt="Instagram" class="img-fluid icon-size" style="width: 30px; filter: brightness(0) invert(0.87);"></a>
+                    <a href="#"><img src="../../assets/icons/twitter.png" alt="Twitter" class="img-fluid icon-size" style="width: 30px; filter: brightness(0) invert(0.87);"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 d-flex justify-content-center align-items-center mb-4">
+            <img src="../../assets/imgs/DSC_0407 copy.JPG" class="shadow-lg rounded" alt="Surgery Image" style="max-width: 50%; height: auto;">
+        </div>
+    </div>
+</div>
